--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div>
       <h2>Nutrition</h2>
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table class="nutrition-table">
+      <table class="nutrition__table">
         <tbody>
           <tr>
             <td>Calories</td>
