--- a/index.html
+++ b/index.html
@@ -8,84 +8,88 @@
   <title>Frontend Mentor | Recipe page</title>
 </head>
 <body>
-  <header></header>
-  <main>
-    <h1>Simple Omelette Recipe</h1>
-    <p>
-      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-    </p>
-    <div class="preparation">
-      <h2>Preparation time</h2>
-      <ul>
-        <li><strong>Total</strong>: Approximately 10 minutes</li>
-        <li><strong>Preparation</strong>: 5 minutes</li>
-        <li><strong>Cooking</strong>: 5 minutes</li>
-      </ul>
+  <main class="container">
+    <div class="card">
+      <div class="card__header"></div>
+      <div class="card__body">
+        <h1 class="card__title">Simple Omelette Recipe</h1>
+        <p class="card__description">
+          An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        </p>
+        <div class="card__preparation">
+          <h2 class="card__preparation__title">Preparation time</h2>
+          <ul>
+            <li><strong>Total</strong>: Approximately 10 minutes</li>
+            <li><strong>Preparation</strong>: 5 minutes</li>
+            <li><strong>Cooking</strong>: 5 minutes</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Ingredients</h2>
+          <ul>
+            <li>2-3 large eggs</li>
+            <li>Salt, to taste</li>
+            <li>Pepper, to taste</li>
+            <li>1 tablespoon of butter or oil</li>
+            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+          </ul>
+        </div>
+        <hr>
+        <div>
+          <h2>Instructions</h2>
+          <ol>
+            <li>
+              <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+              You can add a tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li>
+              <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
+            </li>
+            <li>
+              <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+              the eggs evenly coat the surface.
+            </li>
+            <li>
+              <strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly runny in the 
+              middle, sprinkle your chosen fillings over one half of the omelette.
+            </li>
+            <li>
+              <strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over the 
+              fillings. Let it cook for another minute, then slide it onto a plate.
+            </li>
+            <li>
+              <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
+            </li>
+          </ol>
+        </div>
+        <hr>
+        <div>
+          <h2>Nutrition</h2>
+          <p>The table below shows nutritional values per serving without the additional fillings.</p>
+          <table class="card__nutrition__table">
+            <tbody>
+              <tr>
+                <td>Calories</td>
+                <td><strong>277kcal</strong></td>
+              </tr>
+              <tr>
+                <td>Carbs</td>
+                <td><strong>0g</strong></td>
+              </tr>
+              <tr>
+                <td>Protein</td>
+                <td><strong>20g</strong></td>
+              </tr>
+              <tr>
+                <td>Fat</td>
+                <td><strong>22g</strong></td>
+              </tr>
+            </tbody>
+          </table>
+        </div> 
+      </div>
     </div>
-    <div>
-      <h2>Ingredients</h2>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-      </ul>
-    </div>
-    <hr>
-    <div>
-      <h2>Instructions</h2>
-      <ol>
-        <li>
-          <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-          You can add a tablespoon of water or milk for a fluffier texture.
-        </li>
-        <li>
-          <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
-        </li>
-        <li>
-          <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-          the eggs evenly coat the surface.
-        </li>
-        <li>
-          <strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly runny in the 
-          middle, sprinkle your chosen fillings over one half of the omelette.
-        </li>
-        <li>
-          <strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over the 
-          fillings. Let it cook for another minute, then slide it onto a plate.
-        </li>
-        <li>
-          <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
-        </li>
-      </ol>
-    </div>
-    <hr>
-    <div>
-      <h2>Nutrition</h2>
-      <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table class="nutrition__table">
-        <tbody>
-          <tr>
-            <td>Calories</td>
-            <td><strong>277kcal</strong></td>
-          </tr>
-          <tr>
-            <td>Carbs</td>
-            <td><strong>0g</strong></td>
-          </tr>
-          <tr>
-            <td>Protein</td>
-            <td><strong>20g</strong></td>
-          </tr>
-          <tr>
-            <td>Fat</td>
-            <td><strong>22g</strong></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>    
   </main>
   <footer>
     <div class="attribution">
